--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
     
 <style type="text/css">
 .grid {width:100%;display:block;}
-.grid li.item {width:200px;min-height:100px;float:left}
+.grid li.item {width:200px;min-height:100px;float:left;list-style:none;background:white;}
 .grid li.item h4 {width:100%;display:block;margin:0;padding:10px;background-color:#ccc;}
 </style>
   </head>
@@ -85,7 +85,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="javascripts/jquery.fluidgrid.js"></script>
 <script>
-$('.grid').fluidgrid();    
+$(window).on('load', function(){
+    $('.grid').fluidgrid({default_item_width:200});
+})
+
 </script>
   </body>
 </html>
