--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
     
 <style type="text/css">
 .grid {width:100%;display:block;}
-.grid li.item {width:200px;min-height:100px;float:left;list-style:none;background:white;}
+.grid li.item {width:200px;min-height:100px;float:left;list-style:none;background-color:white;margin:10px;padding:0;}
 .grid li.item h4 {width:100%;display:block;margin:0;padding:10px;background-color:#ccc;}
 </style>
   </head>
@@ -86,7 +86,7 @@
 <script src="javascripts/jquery.fluidgrid.js"></script>
 <script>
 $(window).on('load', function(){
-    $('.grid').fluidgrid({default_item_width:200});
+    $('.grid').fluidGrid({default_item_width:200});
 })
 
 </script>
