example page fix

--- a/example.html
+++ b/example.html
@@ -13,71 +13,72 @@
 <style type="text/css">
 .grid {width:100%;display:block;}
 .grid li.item {width:200px;min-height:100px;float:left;list-style:none;background-color:white;margin:10px;padding:0;}
-.grid li.item h4 {width:100%;display:block;margin:0;padding:10px;background-color:#ccc;}
+.grid li.item img {width:100%;padding:0;margin:0;}
+.grid li.item div {width:100%;display:block;margin:0;padding:10px;background-color:#ccc;}
 </style>
   </head>
 
   <body>
 <ul class="grid">
     <li class="item">
-        <img src="http://lorempixel.com/200/200/" /><h4>test item 1</h4>
+        <img src="http://lorempixel.com/200/200/" /><div>test item 1</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/205/" /><h4>test item 2</h4>
+        <img src="http://lorempixel.com/200/205/" /><div>test item 2</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/230/" /><h4>test item 3</h4>
+        <img src="http://lorempixel.com/200/230/" /><div>test item 3</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/300/" /><h4>test item 4</h4>
+        <img src="http://lorempixel.com/200/300/" /><div>test item 4</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/20/" /><h4>test item 5</h4>
+        <img src="http://lorempixel.com/200/20/" /><div>test item 5</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/200/" /><h4>test item 6</h4>
+        <img src="http://lorempixel.com/200/200/" /><div>test item 6</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/200/" /><h4>test item 7</h4>
+        <img src="http://lorempixel.com/200/200/" /><div>test item 7</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/100/" /><h4>test item 8</h4>
+        <img src="http://lorempixel.com/200/100/" /><div>test item 8</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/500/" /><h4>test item 9</h4>
+        <img src="http://lorempixel.com/200/500/" /><div>test item 9</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/450/" /><h4>test item 10</h4>
+        <img src="http://lorempixel.com/200/450/" /><div>test item 10</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/220/" /><h4>test item 11</h4>
+        <img src="http://lorempixel.com/200/220/" /><div>test item 11</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/95/" /><h4>test item 12</h4>
+        <img src="http://lorempixel.com/200/95/" /><div>test item 12</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/202/" /><h4>test item 13</h4>
+        <img src="http://lorempixel.com/200/202/" /><div>test item 13</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/100/" /><h4>test item 14</h4>
+        <img src="http://lorempixel.com/200/100/" /><div>test item 14</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/304/" /><h4>test item 15</h4>
+        <img src="http://lorempixel.com/200/304/" /><div>test item 15</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/543/" /><h4>test item 16</h4>
+        <img src="http://lorempixel.com/200/543/" /><div>test item 16</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/200/" /><h4>test item 17</h4>
+        <img src="http://lorempixel.com/200/200/" /><div>test item 17</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/150/" /><h4>test item 18</h4>
+        <img src="http://lorempixel.com/200/150/" /><div>test item 18</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/400/" /><h4>test item 19</h4>
+        <img src="http://lorempixel.com/200/400/" /><div>test item 19</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/300/" /><h4>test item 20</h4>
+        <img src="http://lorempixel.com/200/300/" /><div>test item 20</div>
     </li>
 
 </ul>
