example page fix

--- a/example.html
+++ b/example.html
@@ -12,9 +12,9 @@
     
 <style type="text/css">
 .grid {width:100%;display:block;}
-.grid li.item {width:200px;min-height:100px;float:left;list-style:none;background-color:white;margin:10px;padding:0;}
-.grid li.item img {width:100%;padding:0;margin:0;}
-.grid li.item div {width:100%;display:block;margin:0;padding:10px;background-color:#ccc;}
+.grid li.item {width:200px;float:left;list-style:none;background-color:white;margin:10px;padding:0;}
+.grid li.item img {width:100%;padding:0;margin:0;border:1px transparent solid;}
+.grid li.item div {width:100%;display:block;margin:0;padding:0;background-color:#ccc;}
 </style>
   </head>
 
@@ -33,7 +33,7 @@
         <img src="http://lorempixel.com/200/300/" /><div>test item 4</div>
     </li>
     <li class="item">
-        <img src="http://lorempixel.com/200/20/" /><div>test item 5</div>
+        <img src="http://lorempixel.com/200/40/" /><div>test item 5</div>
     </li>
     <li class="item">
         <img src="http://lorempixel.com/200/200/" /><div>test item 6</div>
