--- a/index.html
+++ b/index.html
@@ -31,32 +31,41 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Fluid Grids</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Not long ago I needed some fliud grids ala Pinterest, I found on Quora some explantion about how did that work and then wrote this plugin</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+
+<h4>Example Code</h4>
+<p>Some style</p>
+<pre><code>
+    <style type="text/css">
+    .grid {width:100%;display:block;}
+    .grid li.item {width:200px;float:left;list-style:none;background-color:white;margin:10px;padding:0;}
+    .grid li.item img {width:100%;padding:0;margin:0;border:1px transparent solid;}
+    .grid li.item div {width:100%;display:block;margin:0;padding:0;background-color:#ccc;}
+    </style>
+</code></pre>
+<p>Some code to form the grid, in fact this is just a small version, you can see it working in <a href="example.html">the full example</a></p>
+
+<pre><code>
+<ul class="grid">
+    <li class="item">
+        <img src="http://lorempixel.com/200/200/" /><div>test item 1</div>
+    </li>
+    <li class="item">
+        <img src="http://lorempixel.com/200/205/" /><div>test item 2</div>
+    </li>
+</ul>
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>And at last the javascript, I prefer to load it by the footer. So far the script works best if is launched with the window onload event.</p>
+<pre><code>
+    $(window).on('load', function(){
+        $('.grid').fluidGrid({default_item_width:200});
+    })
+</code></pre>
 
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
