--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script>
+$(function(){
+    $('code').each(function(){
+        $(this).html($(this).html().replace(/</g,'&lt;').replace(/>/g,'&gt;'));
+    })
+});
+</script>
 
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
